# Dicom-Viewer

./: README.md
sources/: .mainwindow.cpp.un~  CMakeLists.txt  grid.cpp  grid.h  main.cpp  mainwindow.cpp  mainwindow.cpp~  mainwindow.h  pydy.py  qrangeslider.cpp  qrangeslider.h  tab.cpp  tab.h
